<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyInsight</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="your">YOUR</string>
    <string name="daily_insight">DAILY INSIGHT</string>
    <string name="enter">Enter</string>
    <string name="act1">Activity1</string>
    <string name="act2">Activity2</string>
    <string name="act3">Activity3</string>
    
    <string name="title_activity_activity1">Activity1</string>
    <string name="edit_message">Please select a name</string>
    <string name="button_send">Press to enter name</string>
    <string-array name="names_array">
        <item>Sia</item>
        <item>Ron</item>
        <item>Luke</item>
        <item>Jaimes</item>
    </string-array>

    <string name="title_activity_activity2">Activity2</string>
    <string name="radio_attitude">Attitude</string>
    <string name="radio_hope">Hope</string>
    <string name="radio_change">Change</string>
    <string name="radio_action">Action</string>
    <string name="contDesc">This is a topic button</string>
    
    <string name="title_activity_activity3">Activity3</string>

</resources>
