<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/purple_flowers"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dailyinsight.Activity2" >

    <RadioGroup
        android:id="@+id/radioTopics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioHope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_hope" />

        <RadioButton
            android:id="@+id/radioChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_change" />

        <RadioButton
            android:id="@+id/radioAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_action" />

        <RadioButton
            android:id="@+id/radioAttitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_attitude" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@+string/contDesc"
        android:src="@drawable/btn_topic" />

</LinearLayout>
